<resources>
    <string name="app_name">OpenedMaps</string>
    <string name="dashboard">Dashboard</string>
    <string name="log_out">Log Out</string>
    <string name="mapping">Mapping</string>
    <string name="todo">TODO</string>
    <string name="settings">Settings</string>
    <string name="collection">Collection</string>
    <string name="about">About</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="view_hotspots">View Hotspots</string>
    <string name="show_route">Show Route</string>
    <string name="todo5">TODO</string>
    <string name="register">Register</string>
    <string name="create_your_account">Create your account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="registerbtn">Register</string>
    <string name="already_have_an_account_log_in_here">Already have an account? Log in here.</string>
    <string name="units_of_measurement">Units of Measurement</string>
    <string name="selected_unit_kilometers">Selected Unit: Kilometers</string>
    <string name="max_distance">Max Distance</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
    <string name="todo6">TODO</string>
    <string name="flywatch_is_your_ideal_bird_watching_companion_thoughtfully_designed_by_the_talented_developers_nick_caleb_darius_paul_and_syuren_chetty">FlyWatch is your ideal bird watching companion, thoughtfully designed by the talented developers, Nick Caleb, Darius Paul, and Syuren Chetty.</string>
    <string name="about2">Prepare to embark on a journey of exploration, learning, and shared experiences. Download FlyWatch today and make bird watching more accessible and enjoyable than ever before. Join us in celebrating the splendor of birds and let your bird watching odyssey take flight with FlyWatch.</string>
    <string name="about3">With FlyWatch, you have a user-friendly app that enhances your birding experience. Explore nearby hotspots, capture sightings, and connect with a vibrant community of fellow bird watchers. It\'s the perfect tool for both novice and seasoned ornithologists.</string>
    <string name="todo7">TODO</string>
    <string name="dashboard2">Dashboard</string>
    <string name="todo8">TODO</string>
    <string name="mappingIcon">Mapping</string>
    <string name="log_out_dash">Log Out</string>
    <string name="about_dash">About</string>
    <string name="collection_dash">Collection</string>
    <string name="settings_dash">Settings</string>
    <string name="todo10">TODO</string>
    <string name="todo11">TODO</string>
    <string name="todo12">TODO</string>
    <string name="todo13">TODO</string>
    <string name="login">Login</string>
    <string name="enter_your_credentials">Enter your credentials</string>
    <string name="email_log">Email</string>
    <string name="password_log">Password</string>
    <string name="login_btn">Login</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an account? Register here.</string>
    <string name="todo14">TODO</string>
</resources>