<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <!-- Background image -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/one"
        android:scaleType="centerCrop"
        android:contentDescription="@string/todo14" />

    <!-- Login UI components -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@android:color/transparent">

        <TextView
            android:id="@+id/LogHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login"
            android:paddingTop="135dp"
            android:textColor="@color/black"
            android:textSize="32sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/enter_your_credentials"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/email_log"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:paddingTop="55dp"
            android:textColorHint="@color/black"
            tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />

        <!-- Password EditText -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:hint="@string/password_log"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColorHint="@color/black"
                tools:ignore="VisualLintTextFieldSize" />

            <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:button="@null"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_show"
                android:id="@+id/togglePasswordVisibility" />
        </LinearLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_btn"
            tools:ignore="DuplicateSpeakableTextCheck,VisualLintButtonSize" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="48dp"
            android:onClick="goToRegisterPage"
            android:text="@string/don_t_have_an_account_register_here"
            android:textColor="@color/black" />

    </LinearLayout>

</RelativeLayout>