<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Setting"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="@drawable/set">

    <!-- Units of Measurement Toggle -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/units_of_measurement"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:layout_marginStart="16dp"
        android:layout_marginTop="180dp" />

    <Switch
        android:id="@+id/unitsToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/unitLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selected_unit_kilometers"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="20dp" />

    <!-- Max Distance -->
    <TextView
        android:id="@+id/distanceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/max_distance"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp" />

    <SeekBar
        android:id="@+id/maxDistanceSlider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:max="1900"
        android:progress="50" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            tools:ignore="ButtonStyle"
            android:layout_marginEnd="10dp"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            tools:ignore="ButtonOrder,ButtonStyle"
            android:layout_marginEnd="10dp"/>

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            tools:ignore="ButtonStyle" />

    </LinearLayout>


</LinearLayout>